--- a/index.html
+++ b/index.html
@@ -92,56 +92,193 @@
     </header>
 
     <main>
-      <!-- section pertama -->
-      <section>
-        <div class="container">
-          <div class="row border">
-            <div class="col-7 border">
-              <h2>Build fast, responsive sites with Bootstrap</h2>
-              <p>
-                Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components,
-                and powerful JavaScript plugins.
-              </p>
-              <button class="btn btn-primary">Get started</button>
-              <button class="btn btn-outline-secondary">Download</button>
-              <ul class="list-inline">
-                <li class="list-inline-item text-secondary">Curently v5.1.3></li>
-                <li class="list-inline-item text-secondary"><a href="#">v4.6.x docs</a></li>
-                <li class="list-inline-item text-secondary"><a href="#">All releases</a></li>
-              </ul>
+      <!-- Description -->
+      <section class="container">
+        <div class="row">
+          <div class="col-lg-6 p-5">
+            <h2 class="display-4 fw-bold">Build fast, responsive sites with Bootstrap</h2>
+            <p class="lh-lg fw-normal">
+              Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and
+              powerful JavaScript plugins.
+            </p>
+            <div class="d-grid gap-2 d-md-block">
+              <button class="btn btn-primary btn-lg" type="submit">Get started</button>
+              <button class="btn btn-outline-secondary btn-lg" type="button">Download</button>
             </div>
-            <div class="col border">
-              <img src="https://picsum.photos/500" alt="" />
-            </div>
+            <ul class="list-inline mt-3">
+              <li class="list-inline-item text-secondary">Curently v5.1.3></li>
+              <li class="list-inline-item text-secondary"><a href="#">v4.6.x docs</a></li>
+              <li class="list-inline-item text-secondary"><a href="#">All releases</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-6 text-center">
+            <img src="/assets/images/web-developer.png" alt="web-developer" class="img-fluid" />
           </div>
         </div>
       </section>
 
-      <!-- section kedua -->
-      <section>
-        <div class="container">
-          <div class="row border">
-            <div class="col border">
-              <a href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16">
-                  <path
-                    d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6zM13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6z"
-                  />
-                </svg>
-              </a>
-              <h2>Installation</h2>
-              <h5>Install Bootstrap’s source Sass and JavaScript files via npm, Composer, or Meteor.</h5>
-              <p>Package managed installs don’t include documentation or our full build scripts. You can also use our npm template repo to quickly generate a Bootstrap project via npm</p>
-              <button class="btn btn-outline-primary">Read installation docs</button>
-            </div>
-            <div class="col border">
-              <div class="row">1</div>
-              <div class="row">2</div>
-            </div>
+      <!-- Installation -->
+      <section class="container">
+        <div class="row">
+          <div class="col-lg-6 p-5">
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-braces" viewBox="0 0 16 16">
+                <path
+                  d="M2.114 8.063V7.9c1.005-.102 1.497-.615 1.497-1.6V4.503c0-1.094.39-1.538 1.354-1.538h.273V2h-.376C3.25 2 2.49 2.759 2.49 4.352v1.524c0 1.094-.376 1.456-1.49 1.456v1.299c1.114 0 1.49.362 1.49 1.456v1.524c0 1.593.759 2.352 2.372 2.352h.376v-.964h-.273c-.964 0-1.354-.444-1.354-1.538V9.663c0-.984-.492-1.497-1.497-1.6zM13.886 7.9v.163c-1.005.103-1.497.616-1.497 1.6v1.798c0 1.094-.39 1.538-1.354 1.538h-.273v.964h.376c1.613 0 2.372-.759 2.372-2.352v-1.524c0-1.094.376-1.456 1.49-1.456V7.332c-1.114 0-1.49-.362-1.49-1.456V4.352C13.51 2.759 12.75 2 11.138 2h-.376v.964h.273c.964 0 1.354.444 1.354 1.538V6.3c0 .984.492 1.497 1.497 1.6z"
+                />
+              </svg>
+            </a>
+            <h2 class="display-3">Installation</h2>
+            <h4 class="fw-normal lh-base mb-3">Install Bootstrap’s source Sass and JavaScript files via npm, Composer, or Meteor.</h4>
+            <p class="lh-base">Package managed installs don’t include documentation or our full build scripts. You can also <a href="#">use our npm template</a> repo to quickly generate a Bootstrap project via npm</p>
+            <button class="btn btn-outline-primary fs-4">Read installation docs</button>
+          </div>
+          <div class="col-lg-6 p-5">
+            <p class="bg-secondary text-start py-3">$ npm install bootstrap</p>
+            <p class="bg-secondary text-start py-3">$ gem install bootstrap -v 5.1.3</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- jsDelivr -->
+      <section class="container">
+        <div class="row">
+          <div class="col-lg-6 p-5">
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cloud" viewBox="0 0 16 16">
+                <path
+                  d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383zm.653.757c-.757.653-1.153 1.44-1.153 2.056v.448l-.445.049C2.064 6.805 1 7.952 1 9.318 1 10.785 2.23 12 3.781 12h8.906C13.98 12 15 10.988 15 9.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 4.825 10.328 3 8 3a4.53 4.53 0 0 0-2.941 1.1z"
+                />
+              </svg>
+            </a>
+            <h2 class="display-3">jsDelivr</h2>
+            <h4 class="fw-normal lh-base mb-3">When you only need to include Bootstrap’s compiled CSS or JS, you can use <a href="#">jsDelivr</a>.</h4>
+            <p class="lh-base">
+              See it in action with our simple <a href="#">starter template</a>, or <a href="#">browse the examples</a> to jumpstart your next project. You can also choose to include Popper and our JS <a href="#">separately</a>.
+            </p>
+            <button class="btn btn-outline-primary fs-4">Explore the docs</button>
+          </div>
+          <div class="col-lg-6 p-5">
+            <p class="bg-secondary text-start py-3"><--- CSS only ---></p>
+            <p class="bg-secondary text-start py-3"><-- JavaScript Bundle with Popper --></p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Bootstrap Icons -->
+      <section class="container">
+        <div class="row">
+          <div class="col-lg-6 p-5">
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-app-indicator" viewBox="0 0 16 16">
+                <path d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1H5.5z" />
+                <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+              </svg>
+            </a>
+            <h2 class="display-3">Bootstrap Icons</h2>
+            <h4 class="fw-normal lh-base mb-3">For the first time ever, Bootstrap has its own open source SVG icon library, designed to work best with our components and documentation.</h4>
+            <p class="lh-base">
+              Bootstrap Icons are designed to work best with Bootstrap components, but they’ll work in any project. They’re SVGs, so they scale quickly and easily, can be implemented in several ways, and can be styled with CSS.
+            </p>
+            <button class="btn btn-outline-primary fs-4">Get Bootstrap Icons</button>
+          </div>
+          <div class="col-lg-6 p-5 text-center">
+            <img src="/assets/images/startup.png" alt="startup" class="img-fluid" />
+          </div>
+        </div>
+      </section>
+
+      <!-- Official Themes -->
+      <section class="container">
+        <div class="row">
+          <div class="col-lg-6 p-5">
+            <a href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-droplet" viewBox="0 0 16 16">
+                <path
+                  fill-rule="evenodd"
+                  d="M7.21.8C7.69.295 8 0 8 0c.109.363.234.708.371 1.038.812 1.946 2.073 3.35 3.197 4.6C12.878 7.096 14 8.345 14 10a6 6 0 0 1-12 0C2 6.668 5.58 2.517 7.21.8zm.413 1.021A31.25 31.25 0 0 0 5.794 3.99c-.726.95-1.436 2.008-1.96 3.07C3.304 8.133 3 9.138 3 10a5 5 0 0 0 10 0c0-1.201-.796-2.157-2.181-3.7l-.03-.032C9.75 5.11 8.5 3.72 7.623 1.82z"
+                />
+                <path fill-rule="evenodd" d="M4.553 7.776c.82-1.641 1.717-2.753 2.093-3.13l.708.708c-.29.29-1.128 1.311-1.907 2.87l-.894-.448z" />
+              </svg>
+            </a>
+            <h2 class="display-3">Official Themes</h2>
+            <h4 class="fw-normal lh-base mb-3">Take Bootstrap to the next level with premium themes from the <a href="#">official Bootstrap Themes marketplace</a>.</h4>
+            <p class="lh-base">Themes are built on Bootstrap as their own extended frameworks, rich with new components and plugins, documentation, and powerful build tools.</p>
+            <button class="btn btn-outline-primary fs-4">Browse themes</button>
+          </div>
+          <div class="col-lg-6 p-5 text-center">
+            <img src="/assets/images/teamwork.png" alt="teamwork" class="img-fluid" />
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="bg-secondary py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-12">
+            <div class="d-flex">
+              <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bootstrap" viewBox="0 0 16 16">
+                  <path
+                    d="M5.062 12h3.475c1.804 0 2.888-.908 2.888-2.396 0-1.102-.761-1.916-1.904-2.034v-.1c.832-.14 1.482-.93 1.482-1.816 0-1.3-.955-2.11-2.542-2.11H5.062V12zm1.313-4.875V4.658h1.78c.973 0 1.542.457 1.542 1.237 0 .802-.604 1.23-1.764 1.23H6.375zm0 3.762V8.162h1.822c1.236 0 1.887.463 1.887 1.348 0 .896-.627 1.377-1.811 1.377H6.375z"
+                  />
+                  <path d="M0 4a4 4 0 0 1 4-4h8a4 4 0 0 1 4 4v8a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4zm4-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V4a3 3 0 0 0-3-3H4z" />
+                </svg>
+              </a>
+              <h5 class="fw-bold">Bootstrap</h5>
+            </div>
+            <p>Designed and built with all the love in the world by the Bootstrap team with the help of our contributors.</p>
+            <p>Code licensed MIT, docs CC BY 3.0.</p>
+            <p>Currently v5.1.3</p>
+          </div>
+          <!-- links -->
+          <div class="col-lg-2 col-md-6">
+            <h5 class="fw-bold">Links</h5>
+            <ul class="list-inline">
+              <li class="py-1">Home</li>
+              <li class="py-1">Docs</li>
+              <li class="py-1">Example</li>
+              <li class="py-1">Themes</li>
+              <li class="py-1">Blog</li>
+            </ul>
+          </div>
+          <!-- guides -->
+          <div class="col-lg-2 col-md-6">
+            <h5 class="fw-bold">Guides</h5>
+            <ul class="list-inline">
+              <li class="py-1">Getting started</li>
+              <li class="py-1">Starter template</li>
+              <li class="py-1">Webpack</li>
+              <li class="py-1">Parcel</li>
+            </ul>
+          </div>
+          <!-- projects -->
+          <div class="col-lg-2 col-md-6">
+            <h5 class="fw-bold">Projects</h5>
+            <ul class="list-inline">
+              <li class="py-1">Bootstrap 5</li>
+              <li class="py-1">Bootstrap 4</li>
+              <li class="py-1">Icons</li>
+              <li class="py-1">RFS</li>
+              <li class="py-1">npm starter</li>
+            </ul>
+          </div>
+          <!-- community -->
+          <div class="col-lg-2 col-md-6">
+            <h5 class="fw-bold">Community</h5>
+            <ul class="list-inline">
+              <li class="py-1">Issues</li>
+              <li class="py-1">Discussions</li>
+              <li class="py-1">Corporate sponsors</li>
+              <li class="py-1">Open Collective</li>
+              <li class="py-1">Slack</li>
+              <li class="py-1">Stack Overflow</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
