added and deleted assets images

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <button class="btn btn-outline-primary fs-4">Get Bootstrap Icons</button>
           </div>
           <div class="col-lg-6 p-5 text-center">
-            <img src="/assets/images/startup.png" alt="startup" class="img-fluid" />
+            <img src="/assets/images/bootstrap-icons.png" alt="startup" class="img-fluid" />
           </div>
         </div>
       </section>
@@ -207,7 +207,7 @@
             <button class="btn btn-outline-primary fs-4">Browse themes</button>
           </div>
           <div class="col-lg-6 p-5 text-center">
-            <img src="/assets/images/teamwork.png" alt="teamwork" class="img-fluid" />
+            <img src="/assets/images/bootstrap-themes.png" alt="teamwork" class="img-fluid" />
           </div>
         </div>
       </section>
